QMenu: guard for destruction when emitting action signals

If a slot connected to a QMenu-action destroys the QMenu, then
we must not touch data members in subsequent code, and instead return
immediately.

We cannot use QBoolBlocker here, as that would reset the data
member of QMenuPrivate even when trying to return early.

Fixes: QTBUG-106718
Change-Id: I6b5ea471b1bf1f9864e1384382100f8f6c01346f
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>
(cherry picked from commit 52ce4d2d29db8a44fa2fa817cab9ebe969db082e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>